<resources>
    <string name="app_name">EmbyUnofficial</string>
    <string name="title">EMBY</string>
    <string name="welcome">Welcome to Emby</string>
    <string name="welcome_message">With Emby you can easily stream videos, music and photos to smart phones, tablets, and other devices from your Emby Server</string>
    <string name="get_emby">To download and Install Emby visit</string>
    <string name="emby_url">http://emby.media</string>
    <string name="next">NEXT</string>
    <string name="sign_message">Sign in with Emby Connect</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot">FORGOT PASSWORD</string>
    <string name="skip">SKIP</string>
    <string name="connect_manualy">Connect to server manually</string>
    <string name="new_user">NEW USER</string>
    <string name="sign_up">SIGN UP</string>
    <string name="user_hint">User</string>
    <string name="password_hint">Password</string>
    <string name="emby_tip">This is your emby online account username or email.</string>
    <string name="add_server">ADD SERVER</string>
    <string name="sing_in_with">SIGN IN WITH EMBY CONNECT</string>
    <string name="select_server_tag">Select Server</string>
    <string name="help">HELP</string>
    <string name="connect_to_server_title">Connect to Server</string>
    <string name="host">Host</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="host_tip">192.168.1.100 or https://myserver.com</string>
    <string name="port">Port</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="preference_file_key">\"com.example.myapp.PREFERENCE_FILE_KEY\"</string>

</resources>