<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="ioembyunofficial.github.httpferezvi.embyunofficial.ConnectToServerActivity"
android:orientation="vertical"
android:background="#2b2b2b"
android:descendantFocusability="beforeDescendants"
android:focusableInTouchMode="true" >

    <LinearLayout  android:id="@+id/logo_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#FFFFFFFF"/>

    </LinearLayout>

    <TextView android:id="@+id/connect_to_server__title"
        android:text="@string/connect_to_server_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_marginTop="22dp"
        android:textSize="24sp"/>

    <android.support.design.widget.TextInputLayout android:id="@+id/host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FF858585">

        <EditText
            android:id="@+id/host_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/host"
            android:textColorHighlight="#FF52b54b"
            android:layout_marginTop="45dp"
            android:textColor="#FFFFFFFF" />

    </android.support.design.widget.TextInputLayout>

    <TextView android:id="@+id/host_tip"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host_tip"
        android:textColor="#FFFFFFFF"
        android:textSize="10sp"/>

    <android.support.design.widget.TextInputLayout android:id="@+id/port"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FF858585">>

        <EditText
            android:id="@+id/port_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/port"
            android:layout_marginTop="45dp"
            android:text="8096"
            android:textColor="#FFFFFFFF"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@drawable/green_button"
        android:clickable="true"
        android:onClick="connect">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/white_check_right" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/connect"
                android:textColor="#FFFFFFFF"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@drawable/grey_button"
        android:clickable="true"
        android:onClick="cancel">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/white_crux_right" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#FFFFFFFF"/>

        </LinearLayout>

    </RelativeLayout>




</LinearLayout>
