<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:background="#2b2b2b">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ioembyunofficial.github.httpferezvi.embyunofficial.LoginActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <LinearLayout  android:id="@+id/logo_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#FFFFFFFF"/>

    </LinearLayout>

    <TextView android:id="@+id/sign_in_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/sign_message"
        android:textColor="#ffffffff"
        android:textSize="24sp"/>


    <android.support.design.widget.TextInputLayout android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FF858585">


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint"
            android:layout_marginTop="45dp"
            android:textColor="#FFFFFFFF" />

    </android.support.design.widget.TextInputLayout>

    <TextView android:id="@+id/emby_tip"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emby_tip"
        android:textColor="#FFFFFFFF"
        android:textSize="10sp"/>

    <android.support.design.widget.TextInputLayout android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FF858585">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:layout_marginTop="45dp"
            android:textColor="#FFFFFFFF"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout android:id="@+id/button_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@drawable/green_button"
        android:clickable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/white_check_right" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="#FFFFFFFF"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout android:id="@+id/button_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@drawable/grey_button"
        android:clickable="true"
        android:onClick="forgot_password">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/white_crux_right" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/forgot"
                android:textColor="#FFFFFFFF"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout android:id="@+id/button_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@drawable/grey_button"
        android:clickable="true"
        android:onClick="manual_connect">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/white_crux_right" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/skip"
                android:textColor="#FFFFFFFF"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView android:id="@+id/connect_tip"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_manualy"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="10sp"
        android:elegantTextHeight="false"
        android:textColorHint="#ffffffff" />

    <TextView android:id="@+id/new_user"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:textColor="#ffffff" />

    <RelativeLayout android:id="@+id/button_new_usert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@drawable/blue_button"
        android:clickable="true"
        android:onClick="sign_up">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/white_plus_right" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/new_user"
                android:textColor="#FFFFFFFF"/>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>

</ScrollView>